--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,4 +2,5 @@
   <m-analog-output [canvasWidth]="20" Type="servo" Level="{{level}}"></m-analog-output>
   <m-analog-output [canvasWidth]="20" Type="motor" Level="{{level}}"></m-analog-output>
   <m-analog-output [canvasWidth]="5" Type="led" Level="{{level}}"></m-analog-output>
+  <m-meter [value]="70" [unit]="'km/h'" [min]="0" [max]="100"></m-meter>
 </m-container>
