--- a/src/app/m-framework/m-analog-output/m-analog-output.component.html
+++ b/src/app/m-framework/m-analog-output/m-analog-output.component.html
@@ -1,1 +1,9 @@
-    <canvas [style.width.%]="canvasWidth" #canvasElement></canvas>
+    <table style="background-color: rgb(238,243,244); width: 400px" class="pure-table">
+        <tr>
+            <td style="text-align:center;"><canvas [style.width.%]="canvasWidth" #canvasElement></canvas></td>
+        </tr>
+        <tr>
+            <td style="text-align: center;"><h1>Level: {{Level}}%</h1></td>
+        </tr>
+    </table>
+    
