--- a/src/app/m-framework/m-meter/m-meter.component.html
+++ b/src/app/m-framework/m-meter/m-meter.component.html
@@ -1,3 +1,3 @@
 
-<div id="container" style="width: 400px; height: 600px; margin: 0 auto">
+<div id="container"style="width: 400px; height: 600px;">
 </div>
